# afids-data

./: Makefile.am  Makefile.in  README  README_RPM  aclocal.m4  afids-data-na.spec  afids-data.spec  afids_data.am  configure  configure.ac
data/: data.am
data/cspice/: earth_latest_high_prec.bpc  geocal.ker.in
data/genealg/: mat1.int  mat10.int  mat11.int  mat3.int  mat4.int  mat5.int  mat6.int  mat9.int  materialofinterest3.ibis
data/joe/: jmacsrc  joerc  jpicorc  jstarrc  rjoerc
data/pommosdata/projdef/: NOTES_for_Mars_Projections.txt  earth_equidistant.prj  earth_geographic.prj  earth_latlon.vic  earth_north_pole_stereographic.prj  earth_proj_equidistant.vic  earth_proj_latlon.vic  earth_proj_northpole_stereographic.vic  earth_proj_sinusoidal.vic  earth_proj_southpole_stereographic.vic  earth_sinusoidal.prj  earth_south_pole_stereographic.prj  luna_equidistant.prj  luna_geographic.prj  luna_north_pole_stereographic.prj  luna_proj_equidistant.vic  luna_proj_latlon.vic  luna_proj_northpole_stereographic.vic  luna_proj_sinusoidal.vic  luna_proj_southpole_stereographic.vic  luna_sinusoidal.prj  luna_south_pole_stereographic.prj  mars_equidistant.prj  mars_geographic.prj  mars_north_pole_stereographic.prj  mars_proj_equidistant.vic  mars_proj_latlon.vic  mars_proj_northpole_stereographic.vic  mars_proj_sinusoidal.vic  mars_proj_southpole_stereographic.vic  mars_sinusoidal.prj  (+1 more)
data/vdev/: af1a_bk.int  chaman1b_bk.int
data/vextract/: amt00a.dff  stdidc.dff  use00a.dff  use26a.dff
script/: setup_afids_data.csh.in  setup_afids_data.sh.in  update_spice.sh.in
